@@ -1,0 +1,73 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+<title>JAIL: Just Another Interpreted Language</title>
+<meta http-equiv="content-type" content=
+"text/html; charset=us-ascii">
+</head>
+<body>
+<link href="jail.css" rel=stylesheet type="text/css"/>
+<a name="top"/>
+<div align="center"><img src="jail-banner.png" alt=
+"Just Another Interpreted Language">
+</div>
+<iframe src="menu.html" type="text/html" width="100%" height="50" frameborder=0 scrolling="no">
+<p>The menu should be here..</p>
+</iframe>
+<table style="width: 100%"> 
+<tbody>
+<tr>
+<td style="width: 20%;" valign="top">
+<iframe src="table_down.html" type="text/html" width="100%" height="800" frameborder=0>
+<p>The TOC should be here..</p>
+</iframe>
+</td>
+<td valign="top">
+<div align="justify">
+<h1>The Jail-Ust Container Library</h1>
+<p>The goal of the Container library is to provide containers (objects that
+contain other objects) for use by Jail-ust and other projects. The library,
+though intended primarily for use in the development of Jail-ust, is also
+intended for use by the general public which means that feature requests,
+bug reports, etc. for projects other than Jail-ust have a good chance to be
+entertained.</p>
+<p>The Container library's primary (technical/technological) goals are:
+<ul>
+<li>To provide containers that are easy to use<br/>
+Comprehensive interface, C bindings, etc.
+</li>
+<li>To provide thread-safe containers<br/>
+Read operations must be thread-safe; write operations should also be 
+thread-safe but may require some memory management. The goal is to make each
+container thread-safe at least for all read operations, to clearly document
+what operations are, and what operations are not, thread-safe.</li>
+<li>To be "blindingly" fast<br/>
+Speed, next to ease of use and thread-safety, is of primary concern 
+</li>
+</ul>
+</p>
+
+
+</div>
+</td>
+<td style="width: 20%;" valign="top">
+<!--  RIGHT-HAND SIDE TEXT HERE -->
+</td>
+</tr>
+</tbody>
+</table>
+<table width="100%">
+<tbody>
+<tr>
+<td style="vertical-align: bottom; text-align: left; font-size: smaller;">This site is hosted by:<br/>
+<a href=
+"http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=85312&amp;type=5"
+width="210" height="62" border="0" align="right" alt=
+"SourceForge.net Logo"></a>
+</td><td style="vertical-align: bottom; text-align: right; font-size: smaller;">
+<a href="#top">back to top</a><br/>
+This page was last updated: $Date: 2004/02/05 15:42:45 $
+</td></tr></tbody></table>
+</body>
+</html>
