@@ -16,7 +16,10 @@ class="toc">
 <table style="width: 100%;" cellspacing="0" cellpadding="8">
 <tbody>
 <tr>
-<td valign="top"><a class="toc" href="download.html">Downloading</a></td>
+<td valign="top"><a class="toc" href="download.html" target="_top">Downloading</a></td>
+</tr>
+<tr>
+<td valign="top"><a class="toc" href="libcontain_down.html" target="_top">libcontain: the container library</a></td>
 </tr>
 <tr>
 <td valign="top"><a class="toc" href="http://sourceforge.net/projects/jail-ust" target="_top">SourceForge
