@@ -1,4 +1,8 @@
 2003-02-05	blytkerchan
+	* libcontain_down.html: new file
+	* table_down.html: add reference to libcontain_down.html
+	repair targets of all links
+
 	* download.html: add words on versions and concluding remark
 
 2004-02-04	blytkerchan
